--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+html,
+body,
+#root
+ {
+  height: 100%;
+  line-height: 1.5;
+}
 .posts{
     width: 75%; 
     padding: 25px;
